Finshed sync with authentication

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -6,7 +6,8 @@
   "webDir": "www",
   "cordova": {},
   "server": {
-    "url": "http://10.0.0.23:8101",
-    "cleartext": true
+    "cleartext": true,
+    "url": "http://10.0.0.6:8100",
+    "originalUrl": "http://10.0.0.6:8100"
   }
 }
