--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "ngx-animate": "^1.0.1",
+    "ngx-timer": "^1.0.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
