--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/crop": "^5.23.0",
     "@ionic-native/facebook": "^5.22.0",
     "@ionic-native/file": "^5.23.0",
+    "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -48,6 +49,7 @@
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-facebook4": "^6.3.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
