--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "ngx-animate": "^1.0.1",
@@ -65,7 +66,7 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "^1.5.1",
+    "@capacitor/cli": "^1.5.3",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
