--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -22,8 +22,6 @@
   },
   "server": {
     "url": "http://10.0.0.5:8100",
-    "cleartext": true,
-    "originalUrl": "http://10.0.0.5:8100",
-    "originalCleartext": true
+    "cleartext": true
   }
 }
