Added script and scripts folder and added npm scripn in package json to generate icons and splash.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
+    "resources": "cordova-res ios && cordova-res android && node scripts/resources.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
