--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -21,7 +21,9 @@
     }
   },
   "server": {
-    "url": "http://10.0.0.5:8100",
-    "cleartext": true
+    "url": "http://192.168.30.32:8100",
+    "cleartext": true,
+    "originalUrl": "http://10.0.0.5:8100",
+    "originalCleartext": true
   }
 }
