--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@capacitor/android": "^1.5.1",
+    "@capacitor/android": "^2.4.2",
     "@capacitor/core": "^1.5.1",
     "@capacitor/ios": "^1.5.1",
     "@ionic-native/base64": "^5.23.0",
@@ -35,6 +35,7 @@
     "@ionic-native/crop": "^5.23.0",
     "@ionic-native/facebook": "^5.22.0",
     "@ionic-native/file": "^5.23.0",
+    "@ionic-native/preview-any-file": "^5.28.0",
     "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -50,13 +51,14 @@
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-facebook4": "^6.3.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-preview-any-file": "^0.1.7",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
+    "jetifier": "^1.6.6",
     "ng2-charts": "^2.3.0",
     "ngx-animate": "^1.0.1",
-    "ngx-pipes": "^2.7.5",
     "ngx-timer": "^1.0.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
