--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "onTarget",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "resources": "cordova-res ios && cordova-res android && node scripts/resources.js",
+    "resources": "cordova-res android && node scripts/resources.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -29,6 +29,7 @@
     "@capacitor/ios": "^1.5.1",
     "@ionic-native/base64": "^5.23.0",
     "@ionic-native/ble": "^5.24.0",
+    "@ionic-native/bluetooth-le": "^5.28.0",
     "@ionic-native/bluetooth-serial": "^5.26.0",
     "@ionic-native/camera": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
@@ -47,6 +48,7 @@
     "chart.js": "^2.9.3",
     "cordova-plugin-ble-central": "^1.2.5",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-bluetoothle": "^6.0.2",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-facebook4": "^6.3.0",
@@ -57,6 +59,7 @@
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
     "jetifier": "^1.6.6",
+    "moment": "^2.29.1",
     "ng2-charts": "^2.3.0",
     "ngx-animate": "^1.0.1",
     "ngx-timer": "^1.0.6",
