--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "adl.onTarget",
   "appName": "onTarget",
   "bundledWebRuntime": false,
   "npmClient": "npm",
@@ -7,8 +7,8 @@
   "cordova": {},
   "plugins": {
     "SplashScreen": {
-      "launchShowDuration": 3000,
-      "launchAutoHide": true,
+      "launchShowDuration": 10000,
+      "launchAutoHide": false,
       "backgroundColor": "#ffffffff",
       "androidSplashResourceName": "splash",
       "androidScaleType": "CENTER_CROP",
@@ -19,9 +19,5 @@
       "splashFullScreen": true,
       "splashImmersive": true
     }
-  },
-  "server": {
-    "url": "http://10.0.0.5:8100",
-    "cleartext": true
   }
 }
