--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':cap-bluetooth-low-energy-client')
     implementation "com.android.support:support-v4:27.+"
     implementation "com.soundcloud.android:android-crop:1.0.0@aar"
+    implementation "androidx.appcompat:appcompat:1.0.0"
     implementation "com.facebook.android:facebook-android-sdk:5.13.0"
 }
 
