--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@ionic-native/camera": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.23.0",
+    "@ionic-native/document-viewer": "^5.29.0",
     "@ionic-native/facebook": "^5.22.0",
     "@ionic-native/file": "^5.23.0",
+    "@ionic-native/native-page-transitions": "^5.29.0",
     "@ionic-native/preview-any-file": "^5.28.0",
     "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -46,11 +48,13 @@
     "angularx-social-login": "^2.2.1",
     "cap-bluetooth-low-energy-client": "^1.0.0",
     "chart.js": "^2.9.3",
+    "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-plugin-ble-central": "^1.2.5",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-bluetoothle": "^6.0.2",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
+    "cordova-plugin-document-viewer": "^1.0.0",
     "cordova-plugin-facebook4": "^6.3.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-preview-any-file": "^0.1.7",
@@ -60,8 +64,10 @@
     "hammerjs": "^2.0.8",
     "jetifier": "^1.6.6",
     "moment": "^2.29.1",
+    "ng-connection-service": "^1.0.4",
     "ng2-charts": "^2.3.0",
     "ngx-animate": "^1.0.1",
+    "ngx-extended-pdf-viewer": "^5.2.1",
     "ngx-timer": "^1.0.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
