--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/router": "~8.2.14",
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "^1.5.1",
-    "@capacitor/ios": "^1.5.1",
+    "@capacitor/ios": "^2.4.2",
     "@ionic-native/base64": "^5.23.0",
     "@ionic-native/ble": "^5.24.0",
     "@ionic-native/bluetooth-le": "^5.28.0",
@@ -37,6 +37,7 @@
     "@ionic-native/document-viewer": "^5.29.0",
     "@ionic-native/facebook": "^5.22.0",
     "@ionic-native/file": "^5.23.0",
+    "@ionic-native/keyboard": "^5.29.0",
     "@ionic-native/native-page-transitions": "^5.29.0",
     "@ionic-native/preview-any-file": "^5.28.0",
     "@ionic-native/screen-orientation": "^5.27.0",
@@ -57,11 +58,13 @@
     "cordova-plugin-document-viewer": "^1.0.0",
     "cordova-plugin-facebook4": "^6.3.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-preview-any-file": "^0.1.7",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
+    "ios": "0.0.1",
     "jetifier": "^1.6.6",
     "moment": "^2.29.1",
     "ng-connection-service": "^1.0.4",
