--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@swimlane/ngx-charts": "^13.0.2",
     "angular-cd-timer": "^1.0.0",
     "angularx-social-login": "^2.2.1",
-    "cap-bluetooth-low-energy-client": "^1.0.0",
     "chart.js": "^2.9.3",
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
+    "cordova-android": "8.1.0",
     "cordova-plugin-ble-central": "^1.2.5",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-bluetoothle": "^6.0.2",
@@ -96,7 +96,13 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -108,7 +114,13 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
       "cordova-plugin-crop": {},
-      "cordova-plugin-bluetooth-serial": {}
+      "cordova-plugin-bluetooth-serial": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
     }
   }
 }
