--- a/package.json
+++ b/package.json
@@ -24,18 +24,20 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
+    "@babel/helper-validator-identifier": "^7.14.0",
+    "@babel/helper-validator-option": "^7.12.17",
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "^1.5.1",
     "@capacitor/ios": "^1.5.1",
     "@ionic-native/base64": "^5.23.0",
-    "@ionic-native/ble": "^5.24.0",
+    "@ionic-native/ble": "^5.33.0",
     "@ionic-native/bluetooth-le": "^5.28.0",
     "@ionic-native/bluetooth-serial": "^5.26.0",
     "@ionic-native/camera": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/crop": "^5.23.0",
     "@ionic-native/document-viewer": "^5.29.0",
-    "@ionic-native/facebook": "^5.22.0",
     "@ionic-native/file": "^5.23.0",
     "@ionic-native/native-page-transitions": "^5.29.0",
     "@ionic-native/preview-any-file": "^5.28.0",
@@ -43,31 +45,29 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@npmcli/move-file": "^1.1.2",
     "@swimlane/ngx-charts": "^13.0.2",
     "angular-cd-timer": "^1.0.0",
     "angularx-social-login": "^2.2.1",
     "chart.js": "^2.9.3",
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-android": "8.1.0",
-    "cordova-plugin-ble-central": "^1.2.5",
-    "cordova-plugin-bluetooth-serial": "^0.4.7",
-    "cordova-plugin-bluetoothle": "^6.0.2",
+    "cordova-ios": "^5.1.1",
+    "cordova-plugin-ble-central": "^1.3.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-document-viewer": "^1.0.0",
-    "cordova-plugin-facebook4": "^6.3.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-preview-any-file": "^0.1.7",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
+    "fast-glob": "^3.2.5",
     "hammerjs": "^2.0.8",
-    "jetifier": "^1.6.6",
     "moment": "^2.29.1",
     "ng-connection-service": "^1.0.4",
     "ng2-charts": "^2.3.0",
     "ngx-animate": "^1.0.1",
-    "ngx-extended-pdf-viewer": "^5.2.1",
     "ngx-timer": "^1.0.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -85,7 +85,13 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
-    "cordova-res": "^0.15.1",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-res": "^0.15.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -96,21 +102,11 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
-    "cordova-plugin-whitelist": "1.3.3",
-    "cordova-plugin-statusbar": "2.4.2",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-ionic-webview": "^4.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5"
+    "typescript": "~3.4.3"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-facebook4": {
-        "APP_ID": "2526341254299735",
-        "APP_NAME": "ADL"
-      },
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
       "cordova-plugin-crop": {},
