--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
     "ng-connection-serice": "^1.0.4",
-    "ng2-charts": "^2.3.0",
+    "ng2-charts": "^2.3.",
     "ngx-animate": "^1.0.1",
     "ngx-timer": "^1.0.6",
     "rxjs": "~6.5.1",
