--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   "private": true,
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.16",
-    "@angular/animations": "~9.1.13",
+    "@angular/animations": "~10.2.5",
     "@angular/cdk": "~9.2.4",
-    "@angular/common": "~9.1.13",
-    "@angular/core": "~9.1.13",
-    "@angular/forms": "~9.1.13",
+    "@angular/common": "~10.2.5",
+    "@angular/core": "~10.2.5",
+    "@angular/forms": "~10.2.5",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.13",
-    "@angular/platform-browser-dynamic": "~9.1.13",
-    "@angular/router": "~9.1.13",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
     "@babel/helper-validator-identifier": "^7.14.0",
     "@babel/helper-validator-option": "^7.12.17",
@@ -66,7 +66,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
     "ng-connection-serice": "^1.0.4",
-    "ng2-charts": "^2.3.",
+    "ng2-charts": "2.4.2",
     "ngx-animate": "^1.0.1",
     "ngx-timer": "^1.0.6",
     "rxjs": "~6.5.1",
@@ -74,11 +74,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/cli": "~9.1.15",
-    "@angular/compiler": "~9.1.13",
-    "@angular/compiler-cli": "~9.1.13",
-    "@angular/language-service": "~9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular/cli": "~10.2.3",
+    "@angular/compiler": "~10.2.5",
+    "@angular/compiler-cli": "~10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@capacitor/cli": "^1.5.3",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
@@ -102,7 +102,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
+    "typescript": "~4.0.7"
   },
   "description": "An Ionic project",
   "cordova": {
