--- a/angular.json
+++ b/angular.json
@@ -90,13 +90,15 @@
                 }
               ],
               "progress": false
-            }
-          }
+            },
+            "development": {}
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app:build:development"
           },
           "configurations": {
             "production": {
@@ -104,8 +106,12 @@
             },
             "ci": {
               "progress": false
+            },
+            "development": {
+              "browserTarget": "app:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -160,8 +166,7 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "app:serve"
+            "protractorConfig": "e2e/protractor.conf.js"
           },
           "configurations": {
             "production": {
@@ -169,8 +174,12 @@
             },
             "ci": {
               "devServerTarget": "app:serve:ci"
+            },
+            "development": {
+              "devServerTarget": "app:serve:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "ionic-cordova-build": {
           "builder": "@ionic/angular-toolkit:cordova-build",
