--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -19,5 +19,9 @@
       "splashFullScreen": true,
       "splashImmersive": true
     }
+  },
+  "server": {
+    "url": "http://localhost:8100",
+    "cleartext": true
   }
 }
