--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "resources": "cordova-res android && node scripts/resources.js",
     "ng": "ng",
-    "run-android": "ionic capacitor run android -l --host= 0.0.0.0",
+    "run-android": "ionic capacitor run android -l --external",
     "start": "ng serve",
     "build": "ionic build --prod && npx cap copy && npx cap sync && npx cap open android",
     "test": "ng test",
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
-    "@babel/helper-validator-identifier": "^7.14.0",
+    "@babel/helper-validator-identifier": "^7.14.9",
     "@babel/helper-validator-option": "^7.12.17",
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "^1.5.1",
@@ -56,6 +56,7 @@
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-android": "8.1.0",
     "cordova-ios": "^5.1.1",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-ble-central": "^1.3.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
@@ -66,6 +67,7 @@
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "fast-glob": "^3.2.5",
+    "jetifier": "^2.0.0",
     "moment": "^2.29.1",
     "ng2-charts": "2.4.2",
     "ngx-animate": "^1.0.1",
