--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,23 +1,29 @@
 {
-	"appId": "adl.onTarget",
-	"appName": "onTarget",
-	"bundledWebRuntime": false,
-	"npmClient": "npm",
-	"webDir": "www",
-	"cordova": {},
-	"plugins": {
-		"SplashScreen": {
-			"launchShowDuration": 10000,
-			"launchAutoHide": false,
-			"backgroundColor": "#ffffffff",
-			"androidSplashResourceName": "splash",
-			"androidScaleType": "CENTER_CROP",
-			"androidSpinnerStyle": "large",
-			"iosSpinnerStyle": "small",
-			"spinnerColor": "#999999",
-			"showSpinner": false,
-			"splashFullScreen": true,
-			"splashImmersive": true
-		}
-	}
+  "appId": "adl.onTarget",
+  "appName": "onTarget",
+  "bundledWebRuntime": false,
+  "npmClient": "npm",
+  "webDir": "www",
+  "cordova": {},
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 10000,
+      "launchAutoHide": false,
+      "backgroundColor": "#ffffffff",
+      "androidSplashResourceName": "splash",
+      "androidScaleType": "CENTER_CROP",
+      "androidSpinnerStyle": "large",
+      "iosSpinnerStyle": "small",
+      "spinnerColor": "#999999",
+      "showSpinner": false,
+      "splashFullScreen": true,
+      "splashImmersive": true
+    }
+  },
+  "server": {
+    "url": "http://192.168.68.103:8100",
+    "cleartext": true,
+    "originalUrl": "http://192.168.68.103:8100",
+    "originalCleartext": true
+  }
 }
