--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -19,5 +19,11 @@
       "splashFullScreen": true,
       "splashImmersive": true
     }
+  },
+  "server": {
+    "url": "http://192.168.68.103:8100",
+    "cleartext": true,
+    "originalUrl": "http://192.168.68.103:8100",
+    "originalCleartext": true
   }
 }
