--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -21,9 +21,7 @@
     }
   },
   "server": {
-    "url": "http://192.168.68.103:8100",
-    "cleartext": true,
-    "originalUrl": "http://192.168.68.103:8100",
-    "originalCleartext": true
+    "url": "http://172.20.10.2:8100",
+    "cleartext": true
   }
 }
