--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ionic-native/native-page-transitions": "^5.29.0",
     "@ionic-native/preview-any-file": "^5.28.0",
     "@ionic-native/screen-orientation": "^5.27.0",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -64,15 +65,21 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-preview-any-file": "^0.1.7",
     "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^2.5.4",
+    "dom-to-image": "^2.6.0",
     "es6-promise-plugin": "^4.2.2",
     "fast-glob": "^3.2.5",
+    "html-to-image": "^1.9.0",
+    "html2canvas": "^1.3.3",
     "jetifier": "^2.0.0",
     "moment": "^2.29.1",
     "ng2-charts": "2.4.2",
     "ngx-animate": "^1.0.1",
+    "ngx-capture": "^0.12.1",
     "ngx-timer": "^1.0.6",
     "rxjs": "~6.5.1",
+    "save-html-as-image": "^1.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
