--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "@angular/common": "~12.0.0",
     "@angular/core": "~12.0.0",
     "@angular/forms": "~12.0.0",
-    "@angular/material": "^12.0.0",
+    "@angular/material": "~12.0.0",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "@awesome-cordova-plugins/android-permissions": "^5.37.3",
+    "@awesome-cordova-plugins/ble": "^5.37.3",
+    "@awesome-cordova-plugins/core": "^5.37.3",
     "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
     "@babel/helper-validator-identifier": "^7.14.9",
     "@babel/helper-validator-option": "^7.12.17",
-    "@capacitor/android": "^2.4.2",
-    "@capacitor/core": "^1.5.1",
-    "@capacitor/ios": "^1.5.1",
+    "@capacitor/android": "^2.5.0",
+    "@capacitor/core": "~2.5.0",
+    "@capacitor/ios": "^2.5.0",
     "@ionic-native/base64": "^5.23.0",
     "@ionic-native/ble": "^5.33.0",
     "@ionic-native/bluetooth-le": "^5.28.0",
@@ -47,6 +50,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@npmcli/fs": "^1.1.0",
     "@npmcli/move-file": "^1.1.2",
     "@sentry/angular": "^6.11.0",
     "@sentry/tracing": "^6.11.0",
@@ -57,8 +61,9 @@
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-android": "8.1.0",
     "cordova-ios": "^5.1.1",
+    "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-ble-central": "^1.3.1",
+    "cordova-plugin-ble-central": "^1.4.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-document-viewer": "^1.0.0",
@@ -70,7 +75,7 @@
     "dom-to-image": "^2.6.0",
     "es6-promise-plugin": "^4.2.2",
     "fast-glob": "^3.2.5",
-    "html-to-image": "^1.9.0",
+    "hammerjs": "^2.0.8",
     "html2canvas": "^1.3.3",
     "jetifier": "^2.0.0",
     "moment": "^2.29.1",
@@ -102,13 +107,13 @@
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
     "cordova-res": "^0.15.3",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.3",
