--- a/package.json
+++ b/package.json
@@ -84,13 +84,13 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0",
+    "@angular-devkit/build-angular": "12.2.14",
     "@angular/cli": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
     "@angular/language-service": "~12.0.0",
     "@capacitor/cli": "^1.5.3",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/angular-toolkit": "^5.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
