--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@awesome-cordova-plugins/android-permissions": "^5.37.3",
-    "@awesome-cordova-plugins/ble": "^5.37.3",
+    "@awesome-cordova-plugins/ble": "^5.39.1",
     "@awesome-cordova-plugins/core": "^5.37.3",
     "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
     "@babel/helper-validator-identifier": "^7.14.9",
@@ -44,6 +44,7 @@
     "@ionic-native/crop": "^5.23.0",
     "@ionic-native/document-viewer": "^5.29.0",
     "@ionic-native/file": "^5.23.0",
+    "@ionic-native/in-app-purchase-2": "^5.36.0",
     "@ionic-native/native-page-transitions": "^5.29.0",
     "@ionic-native/preview-any-file": "^5.28.0",
     "@ionic-native/screen-orientation": "^5.27.0",
@@ -56,6 +57,7 @@
     "@sentry/angular": "^6.11.0",
     "@sentry/tracing": "^6.11.0",
     "@swimlane/ngx-charts": "^13.0.2",
+    "add": "^2.0.6",
     "angular-cd-timer": "^1.0.0",
     "angularx-social-login": "^2.2.1",
     "chart.js": "^2.9.3",
@@ -64,12 +66,13 @@
     "cordova-ios": "^5.1.1",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-ble-central": "github:Gargamil/cordova-plugin-ble-central",
+    "cordova-plugin-ble-central": "^1.4.3",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-document-viewer": "^1.0.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-preview-any-file": "^0.1.7",
+    "cordova-plugin-purchase": "^11.0.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^2.5.4",
@@ -87,6 +90,7 @@
     "rxjs": "~6.5.1",
     "save-html-as-image": "^1.6.0",
     "tslib": "^2.0.0",
+    "yarn": "^1.22.17",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
