--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@babel/helper-validator-option": "^7.12.17",
     "@capacitor/android": "^2.5.0",
     "@capacitor/core": "~2.5.0",
-    "@capacitor/ios": "^2.5.0",
+    "@capacitor/ios": "2",
     "@ionic-native/base64": "^5.23.0",
     "@ionic-native/ble": "^5.33.0",
     "@ionic-native/bluetooth-le": "^5.28.0",
@@ -94,7 +94,7 @@
     "@angular/compiler": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
     "@angular/language-service": "~12.0.0",
-    "@capacitor/cli": "^1.5.3",
+    "@capacitor/cli": "^3.4.0",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
