--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation "com.android.support:support-v4:27.+"
     implementation "com.soundcloud.android:android-crop:1.0.0@aar"
     implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "com.android.billingclient:billing:4.0.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 }
 
