--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,31 +1,31 @@
 {
-  "appId": "adl.onTarget",
-  "appName": "onTarget",
-  "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "www",
-  "cordova": {},
-  "plugins": {
-    "SplashScreen": {
-      "launchShowDuration": 10000,
-      "launchAutoHide": false,
-      "backgroundColor": "#ffffffff",
-      "androidSplashResourceName": "splash",
-      "androidScaleType": "CENTER_CROP",
-      "androidSpinnerStyle": "large",
-      "iosSpinnerStyle": "small",
-      "spinnerColor": "#999999",
-      "showSpinner": false,
-      "splashFullScreen": true,
-      "splashImmersive": true,
-      "Keyboard": {
-        "resize": "none",
-        "style": "dark"
-      }
-    }
-  },
-  "server": {
-    "url": "http://192.168.68.104:8100",
-    "cleartext": true
-  }
+	"appId": "adl.onTarget.app",
+	"appName": "onTarget",
+	"bundledWebRuntime": false,
+	"npmClient": "npm",
+	"webDir": "www",
+	"cordova": {},
+	"plugins": {
+		"SplashScreen": {
+			"launchShowDuration": 10000,
+			"launchAutoHide": false,
+			"backgroundColor": "#ffffffff",
+			"androidSplashResourceName": "splash",
+			"androidScaleType": "CENTER_CROP",
+			"androidSpinnerStyle": "large",
+			"iosSpinnerStyle": "small",
+			"spinnerColor": "#999999",
+			"showSpinner": false,
+			"splashFullScreen": true,
+			"splashImmersive": true,
+			"Keyboard": {
+				"resize": "none",
+				"style": "dark"
+			}
+		}
+	},
+	"server": {
+		"url": "http://192.168.68.104:8100",
+		"cleartext": true
+	}
 }
