--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "resources": "cordova-res android && node scripts/resources.js",
     "ng": "ng",
     "run-android": "ionic capacitor run android -l --external",
+    "run-ios": "ionic capacitor run ios -l --external",
     "start": "ng serve",
     "build": "ionic build --prod && npx cap copy && npx cap sync && npx cap open android",
     "test": "ng test",
@@ -29,6 +30,7 @@
     "@awesome-cordova-plugins/android-permissions": "^5.37.3",
     "@awesome-cordova-plugins/ble": "^5.39.1",
     "@awesome-cordova-plugins/core": "^5.37.3",
+    "@awesome-cordova-plugins/purchases": "^5.39.1",
     "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
     "@babel/helper-validator-identifier": "^7.14.9",
     "@babel/helper-validator-option": "^7.12.17",
@@ -73,6 +75,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-preview-any-file": "^0.1.7",
     "cordova-plugin-purchase": "^11.0.0",
+    "cordova-plugin-purchases": "2.3.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "core-js": "^2.5.4",
