--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "adl.onTarget.app",
+	"appId": "adl.onTarget",
 	"appName": "onTarget",
 	"bundledWebRuntime": false,
 	"npmClient": "npm",
@@ -25,7 +25,7 @@
 		}
 	},
 	"server": {
-		"url": "http://192.168.68.104:8100",
+		"url": "http://172.20.10.9:8100",
 		"cleartext": true
 	}
 }
