Rmoved mock data from dashboard

--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,13 @@
             "extractLicenses": false,
             "buildOptimizer": false,
             "sourceMap": true,
-            "optimization": false,
+            "optimization": {
+              "scripts": true,
+              "styles": {
+                "minify": true,
+                "inlineCritical": false
+              }
+            },
             "namedChunks": true
           },
           "configurations": {
