--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,8 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "plugins/cordova-plugin-camera/types/index.d.ts"
   ],
   "include": [
     "src/**/*.d.ts"
