before zeeshan merge

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -23,5 +23,9 @@
         "style": "dark"
       }
     }
+  },
+  "server": {
+    "url": "http://192.168.68.106:8100",
+    "cleartext": true
   }
 }
