--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,7 +9,7 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-
+    implementation project(':capacitor-camera')
     implementation "com.android.support:support-v4:27.+"
     implementation "com.soundcloud.android:android-crop:1.0.0@aar"
     implementation "androidx.appcompat:appcompat:1.0.0"
@@ -18,7 +18,7 @@ dependencies {
     implementation "androidx.annotation:annotation:[1.2.0]"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 }
-
+apply from: "../../node_modules/cordova-annotated-plugin-android/build.gradle"
 
 if (hasProperty('postBuildExtras')) {
   postBuildExtras()
