--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/helper-validator-identifier": "^7.14.9",
     "@babel/helper-validator-option": "^7.12.17",
     "@capacitor/android": "^3.4.1",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "^3.4.1",
     "@capacitor/ios": "^3.4.1",
     "@ionic-native/base64": "^5.23.0",
@@ -66,6 +67,7 @@
     "chart.js": "^2.9.3",
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-android": "8.1.0",
+    "cordova-annotated-plugin-android": "^1.0.4",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-androidx-adapter": "^1.1.3",
