--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "resources": "cordova-res android && node scripts/resources.js",
     "ng": "ng",
     "run-android": "ionic capacitor run android -l --external",
-    "run-ios": "ionic capacitor run ios -l --external",
+    "run-ios": "ionic capacitor run ios -l --external --watch",
     "start": "ng serve",
     "build": "ionic build --prod && npx cap copy && npx cap sync && npx cap open android",
     "test": "ng test",
