--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation "com.revenuecat.purchases:purchases-hybrid-common:1.8.0"
     implementation "androidx.annotation:annotation:[1.2.0]"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "com.google.android.gms:play-services-ads-identifier:17.0.+"
 }
 apply from: "../../node_modules/cordova-annotated-plugin-android/build.gradle"
 
