--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>Allow On Target to track your personal details for optimising our services</string>
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
